force-app/main/default/objects/FS_Flow_Step__c/FS_Flow_Step__c.object-meta.xml
<CustomObject>
    <description>FlowSense Flow Step execution details for detailed monitoring</description>
    <label>FlowSense Flow Step</label>
    <nameField>
        <displayFormat>FS-STEP-{0000000}</displayFormat>
        <label>Flow Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FlowSense Flow Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    
    <!-- Master-Detail Relationship to Flow Run -->
    <fields>
        <fullName>Flow_Run__c</fullName>
        <label>Flow Run</label>
        <referenceTo>FS_Flow_Run__c</referenceTo>
        <relationshipLabel>Flow Steps</relationshipLabel>
        <relationshipName>Flow_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    
    <!-- Step Sequence -->
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <!-- Element Details -->
    <fields>
        <fullName>Element_DeveloperName__c</fullName>
        <label>Element Developer Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>Element_Label__c</fullName>
        <label>Element Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>Element_Type__c</fullName>
        <label>Element Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assignment</fullName>
                </value>
                <value>
                    <fullName>Decision</fullName>
                </value>
                <value>
                    <fullName>Get Records</fullName>
                </value>
                <value>
                    <fullName>Update Records</fullName>
                </value>
                <value>
                    <fullName>Create Records</fullName>
                </value>
                <value>
                    <fullName>Delete Records</fullName>
                </value>
                <value>
                    <fullName>Apex Action</fullName>
                </value>
                <value>
                    <fullName>Subflow</fullName>
                </value>
                <value>
                    <fullName>Screen</fullName>
                </value>
                <value>
                    <fullName>Loop</fullName>
                </value>
                <value>
                    <fullName>Wait</fullName>
                </value>
                <value>
                    <fullName>Collection Sort</fullName>
                </value>
                <value>
                    <fullName>Collection Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <!-- Timing Information -->
    <fields>
        <fullName>Entered_At__c</fullName>
        <label>Entered At</label>
        <type>DateTime</type>
    </fields>
    
    <fields>
        <fullName>Exited_At__c</fullName>
        <label>Exited At</label>
        <type>DateTime</type>
    </fields>
    
    <fields>
        <fullName>Duration_Millis__c</fullName>
        <label>Duration (ms)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <!-- Performance Metrics -->
    <fields>
        <fullName>CPU_Millis__c</fullName>
        <label>CPU Time (ms)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>SOQL_Count__c</fullName>
        <label>SOQL Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>DML_Count__c</fullName>
        <label>DML Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <!-- Outcome and Error Information -->
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    
    <!-- Input/Output Data -->
    <fields>
        <fullName>Input_Variables__c</fullName>
        <label>Input Variables</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    
    <fields>
        <fullName>Output_Variables__c</fullName>
        <label>Output Variables</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    
</CustomObject>