force-app/main/default/objects/FS_Flow_Step__c/fields/Duration_Millis__c.field-meta.xml
<CustomField>
    <fullName>Duration_Millis__c</fullName>
    <label>Duration (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>