force-app/main/default/objects/FS_Flow_Step__c/fields/Element_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Element_Developer_Name__c</fullName>
    <label>Element Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>