force-app/main/default/objects/FS_Flow_Step__c/fields/Element_Label__c.field-meta.xml
<CustomField>
    <fullName>Element_Label__c</fullName>
    <label>Element Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>