force-app/main/default/objects/FS_Flow_Step__c/fields/Element_Type__c.field-meta.xml
<CustomField>
    <fullName>Element_Type__c</fullName>
    <label>Element Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>Assignment</fullName>
            </value>
            <value>
                <fullName>Decision</fullName>
            </value>
            <value>
                <fullName>Loop</fullName>
            </value>
            <value>
                <fullName>Screen</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Record_Create</fullName>
                <label>Record Create</label>
            </value>
            <value>
                <fullName>Record_Update</fullName>
                <label>Record Update</label>
            </value>
            <value>
                <fullName>Record_Delete</fullName>
                <label>Record Delete</label>
            </value>
            <value>
                <fullName>Get_Records</fullName>
                <label>Get Records Query</label>
            </value>
            <value>
                <fullName>Subflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>