force-app/main/default/objects/FS_Flow_Step__c/fields/Entered_At__c.field-meta.xml
<CustomField>
    <fullName>Entered_At__c</fullName>
    <label>Entered At</label>
    <type>DateTime</type>
</CustomField>