force-app/main/default/objects/FS_Flow_Step__c/fields/Exited_At__c.field-meta.xml
<CustomField>
    <fullName>Exited_At__c</fullName>
    <label>Exited At</label>
    <type>DateTime</type>
</CustomField>