force-app/main/default/objects/FS_Flow_Step__c/fields/Flow_Run__c.field-meta.xml
<CustomField>
    <fullName>Flow_Run__c</fullName>
    <label>Flow Run</label>
    <referenceTo>FS_Flow_Run__c</referenceTo>
    <relationshipLabel>Flow Steps</relationshipLabel>
    <relationshipName>Flow_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>