force-app/main/default/objects/FS_Flow_Step__c/fields/Input_Variables__c.field-meta.xml
<CustomField>
    <fullName>Input_Variables__c</fullName>
    <label>Input Variables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>