force-app/main/default/objects/FS_Flow_Step__c/fields/Output_Variables__c.field-meta.xml
<CustomField>
    <fullName>Output_Variables__c</fullName>
    <label>Output Variables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>