force-app/main/default/objects/FS_Flow_Step__c/fields/SOQL_Count__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Count__c</fullName>
    <label>SOQL Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>